...
    @IBAction func addVenueaction(_ sender: Any) {
        var flag =  Bool()
       flag = self.VenueName.text == "" || self.Cost.text! == "" || self.capacity.text! == "" || self.contactInfo.text! == "" || self.website.text! == "" || self.ownerInfo.text! == ""
        
       if flag {
            print("************")
            let alertController = UIAlertController(title: "Error", message: "All fields are required. Please enter all the informations.", preferredStyle: .alert)
            let defaultAction = UIAlertAction(title: "OK", style: .cancel, handler: nil)
            alertController.addAction(defaultAction)
            present(alertController, animated: true, completion: nil)}
        
        else {
       ref.child("Venues").childByAutoId().setValue(["VenueName": self.VenueName.text! , "Cost": self.Cost.text! , "Capacity": self.capacity.text! , "ContactInfo": self.contactInfo.text! , "website": self.website.text! , "OwnerInfo": self.ownerInfo.text! , "Location": self.location.text!])
        
...
