...
                                        <rect key="frame" x="8" y="25" width="151" height="109"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                        <inset key="contentEdgeInsets" minX="36" minY="0.0" maxX="35" maxY="33"/>
                                        <inset key="titleEdgeInsets" minX="0.0" minY="102" maxX="-25" maxY="26"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="-1" maxY="0.0"/>
                                        <state key="normal" image="contract (2)">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <segue destination="6pA-ct-8Mn" kind="push" id="gDv-kq-wrY"/>
                                        </connections>
                                    </button>
...
                                            </textView>
                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m2w-8f-FRS">
                                                <rect key="frame" x="118" y="296" width="123" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <color key="backgroundColor" red="0.12549019607843137" green="0.63921568627450975" blue="0.61960784313725492" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Publish"/>
                                                <connections>
                                                    <action selector="Publish:" destination="6pA-ct-8Mn" eventType="touchUpInside" id="aHU-e3-pRI"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
